# hello_rocket

./: .gitignore  Cargo.toml  README.md  Rocket.toml  log4rs.yaml
src/: api.rs  doc_id.rs  lib.rs  main.rs  upload.rs
