[package]
name = "hello_rocket"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Mario Schroeder <spindizzy@outlook.com>"]

[dependencies]
rocket = "0.5.1"
rand = "0.8"
serde = "1.0.215"

okapi = "0.7.0"
rocket_okapi = {version = "0.9.0", features = ["swagger", "rapidoc"] }
schemars = "0.8.21"
log4rs = "1.3.0"
log = "0.4.22"
